# dwebble

./: .air.toml  .env  .gitignore  Cargo.toml  Makefile  README.md  api.pyrin  config.example.toml  dwebble.go  flake.nix  go.mod  go.sum  main.go  package-lock.json  package.json  sqlc.yaml
api/: api.go
apis/: album.go  artist.go  auth.go  error.go  handler.go  helper.go  media.go  middleware.go  playlist.go  queue.go  serve.go  sync.go  system.go  tag.go  taglist.go  track.go  user.go
assets/: assets.go
backend/: Cargo.toml  go.mod  go.sum
backend/cmd/dwebble/: main.go
backend/cmd/genmock/: main.go
backend/internal/database/: albums.sql.go  artists.sql.go  models.go  songs.sql.go  tracks.sql.go
backend/internal/handlers/: handlers.go
backend/migrations/: 20231208195252_init.sql
backend/sql/queries/: albums.sql  artists.sql  songs.sql  tracks.sql
backend/sql/schema/: 001_init.sql
backend/src/: data.rs  error.rs  main.rs
cli/: library.go  migrate.go  root.go  serve.go
cmd/: library.go  migrate.go  mock.go  root.go  serve.go
collection/: collection.go
config/: config.go
core/: app.go  base_app.go
database/: album.go  albums.sql.go  api_token.go  artist.go  artists.sql.go  config.go  database.go  filter.go  genre.go  helper.go  models.go  playlist.go  queue.go  search.go  tag.go  taglist.go  track.go  tracks.sql.go  type.go  user.go
docs/: docs.go  swagger.json  swagger.yaml
filter/: filter.go
frontend/: .eslintrc.cjs  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
handlers/: album.go  artist.go  auth.go  handlers.go  playlist.go  queue.go  sync.go  system.go  tag.go  track.go
imp/: imp.go
log/: log.go
migrations/: 00001_base.sql  00002_auth.sql  00003_playlist.sql  00004_server_config.sql  00005_tags.sql  001_init.sql  20240527215211_playlist.sql  20240607101926_genres.sql  (+1 more)
misc/: pyrin.json
struc/: Cargo.toml
struc/src/: collection.rs  main.rs  metadata.rs
(+265 files in other folders)
