[package]
name = "dwebble-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
axum = { version = "0.7.1", features = ["macros"] }
chrono = { version = "0.4.31", features = ["serde"] }
dotenvy = "0.15.7"
dwebble = { version = "0.1.0", path = "../shared" }
log = "0.4.20"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres", "chrono", "macros"] }
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
validator = { version = "0.16.1", features = ["derive"] }
