[package]
name = "struc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive"] }
ctrlc = "3.4.1"
cuid2 = "0.1.2"
dialoguer = "0.11.0"
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
toml = "0.8.8"
walkdir = "2.4.0"
